Fixes mobile layout issues for Panels.

--- a/themes/wwwevergreen/css/src/custom-css/native-cases.scss
+++ b/themes/wwwevergreen/css/src/custom-css/native-cases.scss
@@ -6,3 +6,9 @@
 	flex-wrap: wrap;
 	justify-content: center;
 }
+
+.panels-grid .primary-content-wrapper,
+.panels-grid .sidebar-wrapper{
+	margin-left: 0;
+	width: auto;
+}
